<resources>
    <string name="app_name">FishDiseasesApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_into_your_account">Login into your account</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">LOG IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="forgot_your_account">Forgot Your Account ?</string>
    <string name="create_your_account">Create your account</string>
    <string name="fullname_hint">Fullname</string>
    <string name="new_password_hint">New Password</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="already_have_an_account_hint">Already have an account ?</string>
    <string name="logout_button">logout_button</string>
    <string name="history_button">history_button</string>
    <string name="addimg_btn">addimg_btn</string>
    <string name="desc">   Analyze result is here. Fish disease diagnosis is primarily based on the color and characteristics in the image to target the infected area.we identify the infected fishes caused by the various pathogen.</string>
    <string name="analyze">Analyze</string>

</resources>