<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/menuBG"
    android:paddingTop="20dp"
    tools:context=".ui.login.LoginFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="528dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="26dp"
        android:background="@drawable/rounded_bg"
        android:gravity="top"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="24dp">

                <TextView
                    android:id="@+id/txv_title"
                    style="@style/MediumTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:shadowColor="#808080"
                    android:shadowDx="2"
                    android:shadowDy="2"
                    android:shadowRadius="1"
                    android:text="@string/login_into_your_account"
                    android:textColor="@color/titleTextColor"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="46dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txv_title">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_email"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_edit_text"
                        android:fontFamily="@font/arvo"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/layout_input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="@id/layout_input_email"
                    app:layout_constraintStart_toStartOf="@id/layout_input_email"
                    app:layout_constraintTop_toBottomOf="@id/layout_input_email"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/bg_edit_text"
                        android:fontFamily="@font/arvo"
                        android:hint="@string/password"
                        android:inputType="textPassword" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.edwinyosua.fishdiseasesapp.ui.component.CustomButtonMain
                    android:id="@+id/btn_login"
                    style="@style/ButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="34dp"
                    android:text="@string/log_in"
                    app:layout_constraintEnd_toEndOf="@id/layout_input_password"
                    app:layout_constraintStart_toStartOf="@id/layout_input_password"
                    app:layout_constraintTop_toBottomOf="@id/layout_input_password" />

                <com.edwinyosua.fishdiseasesapp.ui.component.CustomButtonMain
                    android:id="@+id/btn_sign_up"
                    style="@style/ButtonText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/sign_up"
                    app:layout_constraintEnd_toEndOf="@id/btn_login"
                    app:layout_constraintStart_toStartOf="@id/btn_login"
                    app:layout_constraintTop_toBottomOf="@id/btn_login" />

                <TextView
                    android:id="@+id/txt_forgot"
                    style="@style/SmallTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="26dp"
                    android:gravity="center"
                    android:text="@string/forgot_your_account"
                    android:textColor="#3A83B2"
                    app:layout_constraintTop_toBottomOf="@id/btn_sign_up" />


            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</RelativeLayout>